# bvrai

./: .env.example  .gitignore  ANALYSIS_REPORT.md  COMPATIBILITY_AND_LICENSES.md  COMPREHENSIVE_ANALYSIS_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_READINESS.md  Dockerfile  HONEST_TECHNICAL_REVIEW.md  ISSUE_TRACKER.md  KNOWN_ISSUES.md  LICENSE  MANUAL_SETUP_GUIDE.md  RAILWAY_DEPLOYMENT.md  README.md  ROADMAP.md  SENIOR_LEVEL_COMPREHENSIVE_WORK_PLAN.md  SENIOR_PLATFORM_ANALYSIS.md  SETUP_GUIDE.md  SETUP_GUIDE_DETAILED.md  STRATEGIC_PLAN.md  WORK_PLAN_12_16_HOURS.md  alembic.ini  bvrai.db  docker-compose.local.yml  docker-compose.yml  railway.toml  requirements.txt
cli/: README.md  pyproject.toml  setup.py
cli/builderengine_cli/: __init__.py  main.py
cli/builderengine_cli/commands/: __init__.py  agents.py  analytics.py  calls.py  campaigns.py  config.py  numbers.py  webhooks.py
cli/builderengine_cli/utils/: __init__.py  client.py  config.py  output.py
cli/tests/: __init__.py  test_cli.py
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/bvrai/: __init__.py  client.py  exceptions.py  types.py
sdk/python/bvrai_sdk/: __init__.py  agents.py  analytics.py  calls.py  client.py  exceptions.py  knowledge.py  phone_numbers.py  streaming.py  webhooks.py
services/ai-orchestrator/: Dockerfile  pyproject.toml
services/ai-orchestrator/app/: __init__.py  config.py  main.py
services/ai-orchestrator/app/functions/: __init__.py  builtin.py  executor.py  registry.py  schema.py
services/ai-orchestrator/app/llm/: __init__.py  anthropic.py  base.py  groq.py  manager.py  mock.py  openai.py
services/ai-orchestrator/app/rag/: __init__.py  chunker.py  embeddings.py  pipeline.py  retriever.py
services/asr-service/: Dockerfile  pyproject.toml
services/asr-service/app/: __init__.py  config.py  main.py
services/asr-service/app/adapters/: __init__.py  base.py  deepgram.py  mock.py
services/conversation-engine/: Dockerfile  pyproject.toml
services/conversation-engine/app/: __init__.py  config.py  engine.py  main.py
services/conversation-engine/app/context/: __init__.py  manager.py  summarizer.py  window.py
services/conversation-engine/app/dialogue/: __init__.py  manager.py  slots.py
services/conversation-engine/app/events/: __init__.py  bus.py  handlers.py  publisher.py  subscriber.py
services/conversation-engine/app/flow/: __init__.py  builder.py  engine.py  node.py  state.py
services/conversation-engine/app/interrupt/: handler.py
services/conversation-engine/app/memory/: __init__.py  long_term.py  short_term.py  store.py  working.py
services/conversation-engine/app/nlu/: __init__.py  entities.py  intent.py  processor.py  sentiment.py
services/conversation-engine/app/prompts/: __init__.py  builder.py  library.py  manager.py  template.py
services/conversation-engine/app/state/: machine.py
services/conversation-engine/app/turn/: detector.py
services/dialog-manager/: .env.example  Dockerfile  pyproject.toml
services/dialog-manager/app/: __init__.py  config.py  main.py
services/dialog-manager/app/adapters/: __init__.py  llm_adapter.py  vector_adapter.py
services/dialog-manager/app/models/: __init__.py  schemas.py
services/dialog-manager/app/services/: __init__.py  dialog_service.py  session_service.py
services/dialog-manager/tests/: __init__.py  conftest.py  test_api.py  test_dialog_service.py
services/ingestion-service/: Dockerfile  pyproject.toml
services/ingestion-service/app/: __init__.py  main.py
services/media-pipeline/: Dockerfile  pyproject.toml
services/media-pipeline/app/: __init__.py  config.py  main.py
services/media-pipeline/app/audio/: __init__.py  agc.py  noise.py  processor.py  vad.py
services/media-pipeline/app/buffer/: __init__.py  adaptive.py  circular.py  jitter.py
services/media-pipeline/app/codec/: __init__.py  manager.py  opus.py  pcma.py  pcmu.py
services/media-pipeline/app/core/: __init__.py  manager.py  pipeline.py  session.py
services/media-pipeline/app/routing/: __init__.py  mixer.py  router.py  splitter.py
services/media-pipeline/app/streams/: __init__.py  recorder.py  rtp.py  websocket.py
services/platform-api/: Dockerfile  alembic.ini  pyproject.toml
services/platform-api/alembic/: env.py
services/platform-api/alembic/versions/: 20260112_000001_initial_schema.py  20260114_000001_add_telephony_fields.py
services/platform-api/app/: __init__.py  config.py  main.py
services/platform-api/app/agents/: __init__.py  behavior.py  builder.py  config.py  persona.py  prompt.py  routes.py  schemas.py  service.py
services/platform-api/app/analytics/: __init__.py  anomaly.py  routes.py  schemas.py  service.py  timeseries.py
services/platform-api/app/api/: __init__.py  deps.py
services/platform-api/app/auth/: __init__.py  dependencies.py  jwt.py  middleware.py  rbac.py
services/platform-api/app/billing/: __init__.py  invoicing.py  metering.py  pricing.py  usage.py
services/platform-api/app/cache/: __init__.py  distributed.py  memory_cache.py  redis_cache.py  stampede.py
services/platform-api/app/calls/: __init__.py  manager.py  queue.py  router.py  routes.py  schemas.py  service.py  state_machine.py  transfer.py
services/platform-api/app/conversation/: __init__.py  context.py  dialogue.py  engine.py  handler.py  response.py
services/platform-api/app/database/: __init__.py  connection.py  migration.py  models.py  optimization.py  query.py  repository.py  session.py  sharding.py
services/platform-api/app/gateway/: __init__.py  discovery.py  loadbalancer.py  middleware.py  proxy.py  router.py
services/platform-api/app/integrations/: __init__.py  base.py  calendar.py  crm.py  messaging.py
services/platform-api/app/knowledge/: __init__.py  embeddings.py  engine.py  routes.py  schemas.py  service.py
services/platform-api/app/llm/: __init__.py  engine.py  providers.py
services/platform-api/app/ml/: __init__.py  embeddings.py  entities.py  (+4 more)
services/webrtc-gateway/: Dockerfile  pyproject.toml
services/webrtc-gateway/app/: __init__.py  config.py  main.py
(+915 files in other folders)
