[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bvrai-sdk"
version = "1.0.0"
description = "Python SDK for Builder Engine Voice AI Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "BVRAI Team", email = "support@bvrai.com" }
]
keywords = [
    "voice-ai",
    "conversational-ai",
    "speech-to-text",
    "text-to-speech",
    "telephony",
    "twilio",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
streaming = [
    "websockets>=11.0",
]
audio = [
    "pyaudio>=0.2.13",
    "numpy>=1.21.0",
]
all = [
    "websockets>=11.0",
    "pyaudio>=0.2.13",
    "numpy>=1.21.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://bvrai.com"
Documentation = "https://docs.bvrai.com"
Repository = "https://github.com/bvrai/bvrai-python"
Changelog = "https://github.com/bvrai/bvrai-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/bvrai_sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["bvrai_sdk"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "websockets.*",
    "pyaudio.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=bvrai_sdk --cov-report=term-missing"

[tool.coverage.run]
source = ["bvrai_sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
