[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dialog-manager"
version = "1.0.0"
description = "Dialog Manager Service for Builder Engine - RAG orchestration and LLM integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "BVR AI Team" }
]
keywords = ["voice-agent", "dialog", "rag", "llm", "fastapi"]

dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.26.0,<1.0.0",
    "structlog>=24.1.0,<25.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "numpy>=1.26.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "httpx>=0.26.0,<1.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
]
pinecone = [
    "pinecone-client>=3.0.0,<4.0.0",
]
openai = [
    "openai>=1.10.0,<2.0.0",
]
anthropic = [
    "anthropic>=0.18.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
