[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingestion-service"
version = "1.0.0"
description = "Ingestion & Persona Generator for Builder Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "BVR AI Team" }]

dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.26.0,<1.0.0",
    "structlog>=24.1.0,<25.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "numpy>=1.26.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "httpx>=0.26.0,<1.0.0",
    "ruff>=0.1.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
